fix button text wrap

--- a/dngearsim.css
+++ b/dngearsim.css
@@ -100,6 +100,7 @@ word-break: normal;
 padding: 0;
 }
 .toggle-box-button {
+white-space: nowrap;
 float: left;
 display: block;
 height: 24px;
